# arsh-site

./: .env.example  .gitattributes  .gitignore  alembic.ini  index.html  pyproject.toml  requirements.txt  run.bat  run.sh  script.js  style.css
.github/workflows/: ci.yml  deploy.yml
api/: app.py  deps.py  schemas.py  ws.py
api/routes/: analytics.py  auth.py  backtest.py  engine.py  health.py  history.py  instruments.py  kite.py  settings.py  strategies.py
archive/legacy-site/: README.md  index.html
core/: clock.py  config.py  crypto.py  errors.py  events.py  logging.py  schemas.py  security.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard/src/: App.tsx  main.tsx
db/: base.py  models.py  repository.py
db/migrations/: README  env.py
db/repositories/: __init__.py  backtests.py  candles.py  equity.py  orders.py  runs.py  ticks.py  trade_vars.py  trades.py
deploy/: .env.production.example  Caddyfile  README.md  api.service  backup.sh  deploy.sh
docs/: architecture.md  config-and-risk.md  deployment.md  execution-spec.md  requirements.md  strategy-framework.md
docs/implementation/: README.md  code-reuse-strategy.md  task-01-baseline-and-auth.md
engine/: __init__.py  backtest_runner.py  risk.py  runner.py
engine/brokers/: __init__.py  base.py  (+3 more)
scripts/: hash_password.py  init_env.py
services/: instrument_service.py  kite_service.py  settings_service.py  throttle.py
strategies/: __init__.py  ema_crossover.py  open_drive.py
tests/: conftest.py  test_auth_routes.py  test_crypto.py  test_dal_repositories.py  test_kite_credentials.py  test_kite_routes.py  test_security.py  test_settings_routes.py
(+59 files in other folders)
